cargo-features = ["resolver"]
[profile.release]
panic = 'unwind'

[workspace]
exclude = [
    "utils/webpki",
    "utils/ring",
    "utils/serde_json_no_std",
    "utils/serde_derive_no_std",
    "utils/serde_derive_no_std"
]
resolver = "2"

members = [
    'utils/inverse-funtion',
    'cstrml/balances',
    'cstrml/claims',
    'cstrml/staking',
    'cstrml/swork',
    'cstrml/market',
    'cstrml/locks',
    'cstrml/benefits',
    'cstrml/csm-locking',
    'cstrml/bridge',
    'cstrml/bridge-transfer',
    'cstrml/swork/benchmarking',
    'runtime',
    'rpc',
    'node',
]