cargo-features = ["resolver"]
[profile.release]
panic = 'unwind'

[workspace]
exclude = [
    "utils/webpki",
    "utils/ring",
    "utils/serde_json_no_std",
    "utils/serde_derive_no_std",
    "utils/serde_derive_no_std"
]
resolver = "2"

members = [
    'utils/inverse-funtion',
    'cstrml/balances',
    'cstrml/claims',
    'cstrml/staking',
    'cstrml/swork',
    'cstrml/market',
    'cstrml/locks',
    'cstrml/benefits',
    'cstrml/csm-locking',
    'cstrml/bridge',
    'cstrml/bridge-transfer',
    'cstrml/swork/benchmarking',
    'runtime',
    'rpc',
    'node',
]

[patch.crates-io]
fork-tree = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
frame-metadata = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
frame-support-procedural = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
frame-support-procedural-tools = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
frame-support-procedural-tools-derive = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-bounties = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-democracy = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-indices = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-offences = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-tips = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-chain-spec-derive = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-consensus-uncles = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-executor-common = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-executor-wasmi = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-executor-wasmtime = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-informant = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-light = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-network-gossip = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-offchain = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-peerset = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-proposer-metrics = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-rpc-server = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-state-db = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-tracing-proc-macro = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-transaction-graph = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-allocator = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-api-proc-macro = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-authorship = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-consensus-vrf = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-database = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-debug-derive = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-npos-elections = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-npos-elections-compact = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-panic-handler = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-rpc = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-serializer = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-tasks = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-utils = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
sp-wasm-interface = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
substrate-test-utils = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
substrate-test-utils-derive = { git = "https://github.com/paritytech/substrate", branch = "v3.0" }
