[package]
name = "crust"
version = "0.12.0"
authors = ["crustio"]
build = "build.rs"
edition = "2018"
license = "GPL-3.0"
homepage = "https://crust.network"
repository = "https://github.com/crustio/crust/"

[[bin]]
name = "crust"

[dependencies]
# third parity dependencies
futures = "0.3.8"
log = "0.4.11"
structopt = { optional = true, version = "0.3.21" }
hex-literal = "0.3.1"

# substrate client dependencies
authority-discovery = { package = "sc-authority-discovery", version = "0.9.0" }
sc-consensus-babe = "0.9.0"
sc-finality-grandpa  = "0.9.0"
sc-basic-authorship = "0.9.0"
sc-client-api = "3.0.0"
sc-cli = { features = ["wasmtime"], optional = true, version = "0.9.0" }
sc-consensus = "0.9.0"
sc-consensus-slots = "0.9.0"
sc-executor = { features = ["wasmtime"], version = "0.9.0" }
sc-network = "0.9.0"
sc-service = { features = ["wasmtime"], version = "0.9.0" }
sc-transaction-pool = "3.0.0"

# substrate primitives
sp-transaction-pool = "3.0.0"
sp-core = "3.0.0"
sp-consensus = "0.9.0"
sp-consensus-babe = "0.9.0"
sp-inherents = "3.0.0"
sp-io = "3.0.0"
sp-runtime = "3.0.0"
sp-finality-grandpa = "3.0.0"
frame-benchmarking-cli = { optional = true, version = "3.0.0" }
frame-benchmarking = "3.0.0"

# crust runtime modules
crust-runtime = { path = "../runtime", version = "0.12.0" }
cstrml-staking = { path = "../cstrml/staking", version = "0.12.0" }
cstrml-swork = { path = "../cstrml/swork", version = "0.12.0" }
primitives = { package = "cst-primitives", path = "../primitives", version = "0.12.0" }
crust-rpc = { path =  "../rpc", version = "0.12.0" }

[build-dependencies]
substrate-build-script-utils = "3.0.0"
frame-benchmarking-cli = { optional = true, version = "3.0.0" }

[features]
default = [ "cli" ]
cli = [
    "wasmi-errno",
    "sc-cli",
    "frame-benchmarking-cli",
    "sc-service/db",
    "structopt",
]

runtime-benchmarks = [
    "crust-runtime/runtime-benchmarks",
    "frame-benchmarking-cli",
]

wasmtime = [
    "sc-executor/wasmtime",
]

wasmi-errno = [
    "sc-executor/wasmi-errno",
]